<resources>
    <string name="app_name">revis</string>

    <!-- Chat Fragment -->
    <string name="chat_input_hint">Type a message</string>
    <string name="button_send">Send</string>

    <!-- Home Fragment -->
    <string name="tab_all_technicians">All contacts</string>
    <string name="tab_call_logs">Call logs</string>
    <string name="start_call_operator">Join service call</string>
    <string name="start_call_technician">Start service call</string>
    <string name="status_online">Online</string>
    <string name="status_away">Away</string>
    <string name="status_busy">Busy</string>
    <string name="settings">Settings</string>
    <string name="debug_settings">Debug Settings</string>
    <string name="service_call_id">Service call ID</string>
    <string name="record_call">Record call</string>
    <string name="record_call_description">Would you like to record this video call?</string>

    <!-- Settings Fragment -->
    <string name="choose_role">Choose role</string>
    <string name="role_technician">Machine Servicing Technician</string>
    <string name="role_operator">Machine Operator</string>

    <!-- Waiting Room -->
    <string name="waiting_for_user">Waiting for user</string>
    <string name="share_service_call_id">Share service call ID</string>

    <!-- Video Call -->
    <string name="pause_call">Pause</string>
    <string name="annotate">Annotate</string>
    <string name="back">Back</string>
    <string name="message_box_hint">Type a message</string>
    <string name="service_call_title">revis call</string>
    <string name="end_call">End call</string>
    <string name="invite_contacts">Invite contacts</string>
    <string name="invite">Invite</string>
    <string name="settings_video_low">Low (360p, 15fps)</string>
    <string name="settings_video_medium">Medium (480p, 24fps)</string>
    <string name="settings_video_high">High (720p, 30fps)</string>
    <string name="settings_audio_speaker">Use phone speaker</string>
    <string name="tab_video_settings">Video</string>
    <string name="tab_audio_settings">Audio</string>
    <string name="clear">Clear</string>
    <string name="pointer">Pointer</string>
    <string name="arrows">Arrows</string>
    <string name="end_call_confirmation">Are you sure you want to end this call?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="messages">Messages</string>

    <!-- Deep link Dialog -->
    <string name="join_call_via_link_prompt">Would you like to join this servicing call using the revis app?</string>
    <string name="join_call">Join call</string>
    <string name="join">Join</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
</resources>