<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="300dp"
        >

        <TextView
            android:id="@+id/app_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingStart="@dimen/spacing_large"
            android:gravity="center_vertical"
            android:text="@string/join_call"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/AppBarTitleText"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="?actionBarSize"
            />

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/greyLight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_call_id_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_large"
            android:textColorHint="@color/colorPrimaryDark"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:hintAnimationEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_title"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_call_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:letterSpacing="0.5"
                android:cursorVisible="false"
                android:hint="@string/service_call_id"
                android:textColorHint="@color/greyDark"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/font_medium"
                android:inputType="phone"
                android:maxLength="6"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_large"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:text="@string/join"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_call_id_layout"
            style="@style/SolidButtonStyle.Accent"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:text="@string/cancel"
            app:layout_constraintEnd_toStartOf="@+id/button_join"
            app:layout_constraintTop_toBottomOf="@+id/input_call_id_layout"
            style="@style/TextButtonStyle"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
