<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable
            name="channel"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:elevation="10dp"
        >

        <TextView
            android:id="@+id/waiting_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/waiting_for_user"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.15"
            style="@style/AppBarTitleText"
            />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/greyLight"
            android:layout_marginTop="@dimen/spacing_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/waiting_header"
            />

        <TextView
            android:id="@+id/service_call_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.3"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/font_huge"
            android:text="@{channel}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/AppBarTitleText"
            tools:text="213141"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_share_service_call_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_medium"
            android:text="@string/share_service_call_id"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.85"
            style="@style/OutlinedButtonStyle.Circular"
            />

        <TextView
            android:id="@+id/service_call_id_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_call_id"
            android:textSize="@dimen/font_medium"
            app:layout_constraintEnd_toEndOf="@+id/service_call_id"
            app:layout_constraintStart_toStartOf="@+id/service_call_id"
            app:layout_constraintTop_toBottomOf="@+id/service_call_id"
            style="@style/SecondaryText"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
