<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>
        <variable
            name="viewModel"
            type="com.revis.ui.settings.SettingsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentInsetStart="0dp"
            android:contentInsetLeft="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="?android:actionBarSize"
                android:padding="@dimen/spacing_small">

                <ImageButton
                    android:id="@+id/button_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/spacing_smaller"
                    android:layout_centerVertical="true"
                    android:background="?selectableItemBackgroundBorderless"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/ic_back"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/button_back"
                    android:layout_marginStart="@dimen/spacing_small"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:text="@string/settings"
                    style="@style/AppBarTitleText"
                    />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:background="@color/greyLight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            />

        <TextView
            android:id="@+id/text_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_large"
            android:text="@string/choose_role"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            />

        <LinearLayout
            android:id="@+id/role_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_header"
            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/role_technician"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:checked="true"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_marginEnd="@dimen/spacing_small"
                android:text="@string/role_technician"
                app:isSelected="@{viewModel.isUserTechnician()}"
                android:onClick="@{() -> viewModel.setUserRole(true)}"
                style="@style/TextRadioButton"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/role_operator"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_marginEnd="@dimen/spacing_small"
                android:layout_marginTop="@dimen/spacing_small"
                android:text="@string/role_operator"
                app:isSelected="@{!viewModel.isUserTechnician()}"
                android:onClick="@{() -> viewModel.setUserRole(false)}"
                style="@style/TextRadioButton"
                />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
